// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drawMarkers candle with volume events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "rgba(115, 191, 105, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 298,
            "width": 48,
            "x": 26,
            "y": 52,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 72,
            "width": 48,
            "x": 268,
            "y": 278,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 103,
            "width": 48,
            "x": 348,
            "y": 247,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(242, 73, 92, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 166,
            "width": 48,
            "x": 107,
            "y": 184,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 287,
            "width": 48,
            "x": 187,
            "y": 63,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 48,
            "x": 429,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 180,
            "width": 48,
            "x": 509,
            "y": 170,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 291,
            "width": 48,
            "x": 590,
            "y": 59,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 27,
            "width": 48,
            "x": 670,
            "y": 323,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 131,
            "width": 48,
            "x": 751,
            "y": 219,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "rgba(136, 136, 136, 0.5)",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 49,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 26,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 291,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 268,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 371,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 348,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 130,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 107,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 210,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 187,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 452,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 429,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 532,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 509,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 613,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 590,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 693,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 670,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 0,
            "width": 2,
            "x": 774,
            "y": 350,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 48,
            "x": 751,
            "y": 350,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Candle Style: CandleStyle.OHLCBars events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 49,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 26,
            "y": 157,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 50,
            "y": 70,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 291,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 268,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 292,
            "y": 142,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 371,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 348,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 372,
            "y": 171,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 130,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 107,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 131,
            "y": 152,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 210,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 187,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 211,
            "y": 176,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 452,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 429,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 453,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 532,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 509,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 533,
            "y": 215,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 613,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 590,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 614,
            "y": 229,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 693,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 670,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 694,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 751,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 2,
            "width": 24,
            "x": 775,
            "y": 287,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: CloseClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 291,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 34,
            "width": 48,
            "x": 268,
            "y": 142,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 130,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 48,
            "x": 107,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 210,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 120,
            "width": 48,
            "x": 187,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 371,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 5,
            "width": 48,
            "x": 348,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 452,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 20,
            "width": 48,
            "x": 429,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 532,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 44,
            "width": 48,
            "x": 509,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 613,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 24,
            "width": 48,
            "x": 590,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 693,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 39,
            "width": 48,
            "x": 670,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 43,
            "width": 48,
            "x": 751,
            "y": 244,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 49,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 87,
            "width": 48,
            "x": 26,
            "y": 70,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 83,
            "width": 44,
            "x": 28,
            "y": 72,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 30,
            "width": 44,
            "x": 270,
            "y": 144,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 1,
            "width": 44,
            "x": 350,
            "y": 173,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;

exports[`drawMarkers options Color strategy: OpenClose events 1`] = `
[
  {
    "props": {},
    "type": "save",
  },
  {
    "props": {
      "height": 333,
      "width": 725,
      "x": 50,
      "y": 17,
    },
    "type": "rect",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {},
          "type": "beginPath",
        },
        {
          "props": {
            "height": 333,
            "width": 725,
            "x": 50,
            "y": 17,
          },
          "type": "rect",
        },
      ],
    },
    "type": "clip",
  },
  {
    "props": {
      "value": "#73bf69",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 49,
            "y": 46,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 87,
            "width": 48,
            "x": 26,
            "y": 70,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 291,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 34,
            "width": 48,
            "x": 268,
            "y": 142,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 371,
            "y": 123,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 5,
            "width": 48,
            "x": 348,
            "y": 171,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#f2495c",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [
        {
          "props": {
            "height": 96,
            "width": 2,
            "x": 130,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 96,
            "width": 48,
            "x": 107,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 125,
            "width": 2,
            "x": 210,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 120,
            "width": 48,
            "x": 187,
            "y": 56,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 25,
            "width": 2,
            "x": 452,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 20,
            "width": 48,
            "x": 429,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 49,
            "width": 2,
            "x": 532,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 44,
            "width": 48,
            "x": 509,
            "y": 171,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 38,
            "width": 2,
            "x": 613,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 24,
            "width": 48,
            "x": 590,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 53,
            "width": 2,
            "x": 693,
            "y": 191,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 39,
            "width": 48,
            "x": 670,
            "y": 205,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 77,
            "width": 2,
            "x": 774,
            "y": 244,
          },
          "type": "rect",
        },
        {
          "props": {
            "height": 43,
            "width": 48,
            "x": 751,
            "y": 244,
          },
          "type": "rect",
        },
      ],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "#888888",
    },
    "type": "fillStyle",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {
      "value": "destination-out",
    },
    "type": "globalCompositeOperation",
  },
  {
    "props": {
      "fillRule": "nonzero",
      "path": [],
    },
    "type": "fill",
  },
  {
    "props": {},
    "type": "restore",
  },
]
`;
